[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "encode-utils-cli"
version = "0.0.0"
description = "Encode utils collection"
authors = ["DeadNews <aurczpbgr@mozmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DeadNews/encode-utils-cli"
repository = "https://github.com/DeadNews/encode-utils-cli"
keywords = ["cli", "encode", "vapoursynth", "mpls"]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Video",
]

[tool.poetry.scripts]
encode-utils-cli = "encode_utils_cli._cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
vapoursynth = ">=60"
click = "^8.1.3"
pyperclip = "^1.8.2"
pyyaml = "^6.0"
schema = "^0.7.5"
tomli = "^2.0.1"

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
poethepoet = "^0.20.0"
ruff = "^0.0.272"
types-pyyaml = "^6.0.12.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-click = "^0.8.0"

[tool.poe.tasks]
ruff = "ruff check ."
black = "black --check ."
mypy = "mypy ."
lint.sequence = ["ruff", "black", "mypy"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.black]
line-length = 99

[tool.mypy]
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
allow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--verbose --cov=./src"
testpaths = ["tests"]
markers = ["docker", "key_required"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "if __name__ == .__main__.:"]

[tool.ruff]
line-length = 99
select = ["ALL"]
ignore = [
  "COM812", # Trailing comma missing
  "D203",   # 1 blank line required before class docstring
  "D212",   # Multi-line docstring summary should start at the first line
  "E501",   # Line too long
  "EXE001", # Shebang is present but file is not executable
  "FBT001", # Boolean positional arg in function definition
  "FBT002", # Boolean default value in function definition
  #
  "D100", # Missing docstring in public module
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN", "D", "PLC1901", "PLR2004", "S"]

[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = false

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.pylint]
max-args = 6
