[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "encode-utils-cli"
version = "0.0.0"
description = "Encode utils collection"
authors = ["DeadNews <aurczpbgr@mozmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DeadNews/encode-utils-cli"
repository = "https://github.com/DeadNews/encode-utils-cli"
keywords = ["cli", "encode", "vapoursynth", "mpls"]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Video",
]

[tool.poetry.scripts]
encode-utils-cli = "encode_utils_cli._cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
vapoursynth = "^64"
click = "^8.1.7"
pyperclip = "^1.8.2"
pyyaml = "^6.0.1"
schema = "^0.7.5"
tomli = "^2.0.1"

[tool.poetry.group.lint.dependencies]
mypy = "^1.6.1"
poethepoet = "^0.24.1"
ruff = "^0.1.3"
types-pyyaml = "^6.0.12.12"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-click = "^0.8.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poe.tasks]
mypy = "mypy ."
ruff = "ruff check ."
fmt = "ruff format ."
lint.sequence = ["ruff", "fmt", "mypy"]

[tool.poe.tasks.test]
cmd = "pytest --cov-report=xml"

[tool.pytest.ini_options]
addopts = "--verbose --cov=./src --cov-report=term"
testpaths = ["tests"]
markers = ["online"]

[tool.coverage.report]
exclude_lines = [
  "# pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*"]
allow_untyped_defs = true

[tool.ruff]
line-length = 99
target-version = "py310" # until poetry v2

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # Trailing comma missing
  "D203",    # 1 blank line required before class docstring
  "D212",    # Multi-line docstring summary should start at the first line
  "E501",    # Line too long
  "EXE001",  # Shebang is present but file is not executable
  "FBT001",  # Boolean positional arg in function definition
  "FBT002",  # Boolean default value in function definition
  "ISC001",  # Checks for implicitly concatenated strings on a single line.
  "PLR0913", # Too many arguments to function call
  #
  "D100", # Missing docstring in public module
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN", "D", "PLC1901", "PLR2004", "S"]

[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = false

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"
